objects/Account.object
<CustomObject>
    <fields>
        <fullName>Total_Aftermarket_AR_over_60_Days__c</fullName>
        <formula>Total_Aftermarket_AR_61_to_90_Days__c + Total_Aftermarket_AR_over_90_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Aftermarket AR over 60 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Aftermarket_AR_over_90_Days__c</fullName>
        <description>This defines the total Aftermarket AR value that is over 90 days past due</description>
        <inlineHelpText>This defines the total Aftermarket AR value that is over 90 days past due</inlineHelpText>
        <label>Total Aftermarket AR over 90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_Customer__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X18_Char_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account 18 Char ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fmeAccountCustomerSince__c</fullName>
        <description>Date since this account has the status &quot;Customer&quot;.
Date of first machine oder.</description>
        <label>Customer Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fmeAccountE1AddressNo__c</fullName>
        <label>E1 Address No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fmeAccountExtnernalSalesRep__c</fullName>
        <description>If this account belongs to an external agency this field contains the name of the sales rep at the agency who is responsible for this acccount.</description>
        <label>Sales Rep Agency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>fmeAccountSalesAgency__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abdal, Fadi</fullName>
                </value>
                <value>
                    <fullName>Andersen, Erik Sten</fullName>
                </value>
                <value>
                    <fullName>Becker, Mike</fullName>
                </value>
                <value>
                    <fullName>Bingt, Ben</fullName>
                </value>
                <value>
                    <fullName>Blum, Steffen</fullName>
                </value>
                <value>
                    <fullName>Bocek, Jiri</fullName>
                </value>
                <value>
                    <fullName>Breisacher, Bernd</fullName>
                </value>
                <value>
                    <fullName>Brown, Tom</fullName>
                </value>
                <value>
                    <fullName>Bugoi, Lucian</fullName>
                </value>
                <value>
                    <fullName>Dobaran, Guillermo</fullName>
                </value>
                <value>
                    <fullName>Dobnik, Rajko (DME)</fullName>
                </value>
                <value>
                    <fullName>Domingo, Xavi</fullName>
                </value>
                <value>
                    <fullName>Douvidzon, Vladimir G.</fullName>
                </value>
                <value>
                    <fullName>Filarski, Ryszard</fullName>
                </value>
                <value>
                    <fullName>Forghieri, Paolo</fullName>
                </value>
                <value>
                    <fullName>Gallego, Ernest</fullName>
                </value>
                <value>
                    <fullName>GECIM</fullName>
                </value>
                <value>
                    <fullName>Goldberg, Martin</fullName>
                </value>
                <value>
                    <fullName>Green, Johan</fullName>
                </value>
                <value>
                    <fullName>Hofer, Norbert</fullName>
                </value>
                <value>
                    <fullName>Jumneanwattanaphan, Pranee</fullName>
                </value>
                <value>
                    <fullName>Karic, Ivan</fullName>
                </value>
                <value>
                    <fullName>Kim, Hyunglip</fullName>
                </value>
                <value>
                    <fullName>Konkoly-Thege, István</fullName>
                </value>
                <value>
                    <fullName>Kovacs, Viktor</fullName>
                </value>
                <value>
                    <fullName>Le Bar, Laurent</fullName>
                </value>
                <value>
                    <fullName>Lie, Kristianto</fullName>
                </value>
                <value>
                    <fullName>Lin, Joseph C.</fullName>
                </value>
                <value>
                    <fullName>Martinez, Miguel</fullName>
                </value>
                <value>
                    <fullName>Moore, Hugh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fmeAccountKeyAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box need to be checked if this account is a Key Account Customer</description>
        <label>Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fmeAccountResponsibleInternal__c</fullName>
        <description>Person that is internally (FME) repsonible for this account</description>
        <inlineHelpText>Person that is internally (FME) repsonible for this account</inlineHelpText>
        <label>Responsible Internally</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Andreas Mense</fullName>
                </value>
                <value>
                    <fullName>Andreas Westhäußer</fullName>
                </value>
                <value>
                    <fullName>Anis Zouari</fullName>
                </value>
                <value>
                    <fullName>Bernd Breisacher</fullName>
                </value>
                <value>
                    <fullName>Gideon Staenke</fullName>
                </value>
                <value>
                    <fullName>Laurent Le Bar</fullName>
                </value>
                <value>
                    <fullName>Marek Susky</fullName>
                </value>
                <value>
                    <fullName>Ruben Calvo</fullName>
                </value>
                <value>
                    <fullName>Sebastien Malbec</fullName>
                </value>
                <value>
                    <fullName>Simon Rieder</fullName>
                </value>
                <value>
                    <fullName>Steffen Blum</fullName>
                </value>
                <value>
                    <fullName>Stephane Grossnickel</fullName>
                </value>
                <value>
                    <fullName>Thomas Striegel</fullName>
                </value>
                <value>
                    <fullName>Xavier Domingo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fmeAccountSalesAgency__c</fullName>
        <description>Name of the agency where this account belongs to</description>
        <label>SalesAgency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FME Germany</fullName>
                </value>
                <value>
                    <fullName>FME France</fullName>
                </value>
                <value>
                    <fullName>FME Spain</fullName>
                </value>
                <value>
                    <fullName>FME Swiss</fullName>
                </value>
                <value>
                    <fullName>F UK</fullName>
                </value>
                <value>
                    <fullName>F NL</fullName>
                </value>
                <value>
                    <fullName>F DK</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Schweden + Norwegen</fullName>
                </value>
                <value>
                    <fullName>Polen</fullName>
                </value>
                <value>
                    <fullName>Milacron CZ</fullName>
                </value>
                <value>
                    <fullName>Slowakai</fullName>
                </value>
                <value>
                    <fullName>Finnland</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Ungarn</fullName>
                </value>
                <value>
                    <fullName>Malta</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Rumänien</fullName>
                </value>
                <value>
                    <fullName>Russland</fullName>
                </value>
                <value>
                    <fullName>Serbien</fullName>
                </value>
                <value>
                    <fullName>Slowenien</fullName>
                </value>
                <value>
                    <fullName>Türkei</fullName>
                </value>
                <value>
                    <fullName>Indien</fullName>
                </value>
                <value>
                    <fullName>Indonesien</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Singapur</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ltnadptn__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__MAAssignmentRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Assignment Rule</label>
        <referenceTo>sma__MAAssignmentRule__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Soldto__c</columns>
        <columns>Billto__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Americas_Extrusion_Sales_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Americas_Injection_General_Mgr</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Americas_Injection_Sales_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Americas_Injection_Service_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Americas_US_Aftermarket_Sales_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Brazil_Sales_Engineer</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Brazil_Senior_Sales_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>China_Injection_General_Mgr</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Europe_Systems_Sales_Leader</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Active_Accounts</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Business_Unit_Code__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>Soldto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Active_Account</value>
        </filters>
        <label>All Active Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Americas_Extrusion_Sales_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Americas_Injection_General_Mgr</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Americas_Injection_Sales_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Americas_Injection_Service_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Americas_Injection_Support</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Americas_Systems_Sales_Engineer</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Americas_Systems_Sales_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Americas_US_Aftermarket_Sales_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Asia_Systems_Sales_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Brazil_Sales_Engineer</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Brazil_Senior_Sales_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>China_Injection_General_Mgr</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>China_Injection_Sales_Leader</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>China_Injection_Support</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brazil_Accounts</fullName>
        <columns>Business_Unit_Code__c</columns>
        <columns>Address_Type__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Billto__c</columns>
        <columns>Soldto__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Region__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <label>Brazil Accounts</label>
    </listViews>
    <listViews>
        <fullName>Cambio</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>pcamb,bstri</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS2_STATE</field>
            <operation>equals</operation>
            <value>NY,VT,RI,CT,MA</value>
        </filters>
        <label>Cambio</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Americas_Injection_General_Mgr</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Americas_Injection_Support</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cangen3</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Business_Unit_Code__c</columns>
        <columns>Billto__c</columns>
        <columns>Soldto__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit_Code__c</field>
            <operation>equals</operation>
            <value>100</value>
        </filters>
        <label>Cangen</label>
        <language>en_US</language>
        <sharedTo>
            <role>Americas_Extrusion_NA_East_Sales_Eng</role>
            <role>Americas_Extrusion_NA_East_Sales_Leader</role>
            <role>Americas_Extrusion_NA_West_Sales_Eng</role>
            <role>Americas_Extrusion_NA_West_Sales_Leader</role>
            <role>Americas_Extrusion_Sales_Leader</role>
            <role>Americas_Injection_General_Mgr</role>
            <role>Americas_Injection_LA_Direct_Service_Technician</role>
            <role>Americas_Injection_LA_Independent_Service_Provider</role>
            <role>Americas_Injection_LA_Regional_Service_Manager</role>
            <role>Americas_Injection_LA_Sales_Eng</role>
            <role>Americas_Injection_LA_Sales_Leader</role>
            <role>Americas_Injection_NA_Direct_Service_Technician</role>
            <role>Americas_Injection_NA_Eastern_Aftermarket_Sales_Eng</role>
            <role>Americas_Injection_NA_Eastern_Sales_Eng</role>
            <role>Americas_Injection_NA_Eastern_Sales_Leader</role>
            <role>Americas_Injection_NA_Independent_Service_Provider</role>
            <role>Americas_Injection_NA_Mid_West_Aftermarket_Sales_Eng</role>
            <role>Americas_Injection_NA_Mid_West_Sales_Eng</role>
            <role>Americas_Injection_NA_Mid_West_Sales_Leader</role>
            <role>Americas_Injection_NA_Northeastern_Aftermarket_Sales_Eng</role>
            <role>Americas_Injection_NA_Northeastern_Sales_Eng</role>
            <role>Americas_Injection_NA_Northeastern_Sales_Leader</role>
            <role>Americas_Injection_NA_Regional_Service_Manager</role>
            <role>Americas_Injection_NA_Western_Aftermarket_Sales_Eng</role>
            <role>Americas_Injection_NA_Western_Sales_Eng</role>
            <role>Americas_Injection_NA_Western_Sales_Leader</role>
            <role>Americas_Injection_Sales_Leader</role>
            <role>Americas_Injection_Service_Leader</role>
            <role>Americas_Injection_Support</role>
            <role>Americas_Systems_Sales_Engineer</role>
            <role>Americas_Systems_Sales_Leader</role>
            <role>Americas_US_Aftermarket_Sales_Leader</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>East_Region</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Soldto__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS2_STATE</field>
            <operation>equals</operation>
            <value>OH,IN,MI,KY,TN,AL,GA,FL,SC,NC,VA,WV,PA,MD,NY,NJ,CT,RI,VT,NH,MA,ME</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS2_STATE</field>
            <operation>equals</operation>
            <value>OH,IN,MI,KY,TN,AL,GA,FL,SC,NC,VA,WV,PA,MD,NY,NJ,CT,RI,VT,NH,MA,ME</value>
        </filters>
        <label>Region - East</label>
        <language>en_US</language>
        <sharedTo>
            <group>Milacron_USA</group>
            <group>Milacron_USA_Service_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Extrusion</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>Soldto__c</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit_Code__c</field>
            <operation>equals</operation>
            <value>20</value>
        </filters>
        <label>Extrusion</label>
        <language>en_US</language>
        <sharedTo>
            <role>Americas_Extrusion_NA_East_Sales_Eng</role>
            <role>Americas_Extrusion_NA_East_Sales_Leader</role>
            <role>Americas_Extrusion_NA_West_Sales_Eng</role>
            <role>Americas_Extrusion_NA_West_Sales_Leader</role>
            <role>Americas_Extrusion_Sales_Leader</role>
            <role>Extrusion_CanGen_Sales_Leader</role>
            <role>Extrusion_Canterbury_Sales_Engineer</role>
            <role>Extrusion_Canterbury_Sales_Leader</role>
            <role>Extrusion_Genca_Sales_Engineer</role>
            <role>Extrusion_Genca_Sales_Leader</role>
            <role>Global_Extrusion</role>
            <role>Global_Extrusion_General_Manager</role>
            <role>Global_Extrusion_Support</role>
            <role>International_Extrusion_European_Sales_Eng</role>
            <role>International_Extrusion_Platform_Emerging_Markets_Sales_Leader</role>
            <role>International_Extrusion_Platform_LA_Sales_Eng</role>
            <role>International_Extrusion_Sales_Leader</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Extrusion_International</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Country__c</columns>
        <columns>Agent_Email__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Agent_Mobile__c</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>Agent_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Jones</value>
        </filters>
        <label>Extrusion - International</label>
        <language>en_US</language>
        <sharedTo>
            <role>Americas_Extrusion_NA_East_Sales_Eng</role>
            <role>Americas_Extrusion_NA_East_Sales_Leader</role>
            <role>Americas_Extrusion_NA_West_Sales_Eng</role>
            <role>Americas_Extrusion_NA_West_Sales_Leader</role>
            <role>Americas_Extrusion_Sales_Leader</role>
            <role>Extrusion_CanGen_Sales_Leader</role>
            <role>Extrusion_Canterbury_Sales_Engineer</role>
            <role>Extrusion_Canterbury_Sales_Leader</role>
            <role>Extrusion_Genca_Sales_Engineer</role>
            <role>Extrusion_Genca_Sales_Leader</role>
            <role>Global_Extrusion</role>
            <role>Global_Extrusion_General_Manager</role>
            <role>Global_Extrusion_Support</role>
            <role>International_Extrusion_European_Sales_Eng</role>
            <role>International_Extrusion_Platform_Emerging_Markets_Sales_Leader</role>
            <role>International_Extrusion_Platform_LA_Sales_Eng</role>
            <role>International_Extrusion_Sales_Leader</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FME_All_FME_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Address_Source_Company__c</columns>
        <columns>Customer_Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PARENT_NAME</columns>
        <columns>fmeAccountKeyAccount__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Business_Unit_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Address_Source_Company__c</field>
            <operation>equals</operation>
            <value>400 - Ferromatik Germany</value>
        </filters>
        <label>FME - All FME Accounts</label>
        <language>de</language>
        <sharedTo>
            <role>Europe_Blow_Molding_Sales_Leader</role>
            <role>Europe_Injection_France_Sales_Leader</role>
            <role>Europe_Injection_General_Mgr</role>
            <role>Europe_Injection_German_Sales_Leader</role>
            <role>Europe_Injection_Italy_Malta_Sales_Eng</role>
            <role>Europe_Injection_Italy_Malta_Sales_Leader</role>
            <role>Europe_Injection_ROW_Sales_Eng</role>
            <role>Europe_Injection_ROW_Sales_Leader</role>
            <role>Europe_Injection_Sales_Leader</role>
            <role>Europe_Injection_Spain_Sales_Leader</role>
            <role>Europe_Injection_Support</role>
            <role>Europe_Systems_Sales_Leader</role>
            <role>European_Injection_France_Sales_Eng</role>
            <role>European_Injection_German_Sales_Eng</role>
            <role>International_Extrusion_European_Sales_Eng</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FMI_CSD_Export</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Service_Region__c</columns>
        <columns>GSTIN__c</columns>
        <columns>Total_Aftermarket_AR_India__c</columns>
        <columns>Soldto__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Region__c</field>
            <operation>equals</operation>
            <value>Export-India</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Active_Account</value>
        </filters>
        <label>FMI_Export</label>
        <sharedTo>
            <group>India_Export_Team</group>
            <role>India_Injection_Export_Sales_Eng</role>
            <role>India_Injection_Export_Sales_Leader</role>
            <role>India_Injection_General_Mgr</role>
            <role>India_Injection_Service_Leader_CSD</role>
            <role>India_Injection_Service_Leader_CSD_Export_1</role>
            <role>India_Injection_Service_Leader_CSD_Export_2</role>
            <role>India_Injection_Service_Technician_CSD</role>
            <role>India_Injection_Service_Technician_CSD_Export_1</role>
            <role>India_Injection_Service_Technician_CSD_Export_2</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FMI_Central_Ahd</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Service_Region__c</columns>
        <columns>GSTIN__c</columns>
        <columns>Total_Aftermarket_AR_India__c</columns>
        <columns>Soldto__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Region__c</field>
            <operation>equals</operation>
            <value>Ahmedabad</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Active_Account</value>
        </filters>
        <label>FMI_Ahmedabad</label>
        <sharedTo>
            <role>India_Injection_Service_Leader_Central_Ah_Bad</role>
            <role>India_Injection_Service_Technician_Central_Ah_Bad</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FMI_Chandigarh</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Service_Region__c</columns>
        <columns>GSTIN__c</columns>
        <columns>Total_Aftermarket_AR_India__c</columns>
        <columns>Soldto__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Region__c</field>
            <operation>equals</operation>
            <value>Chandigarh</value>
        </filters>
        <label>FMI_Chandigarh</label>
        <language>en_US</language>
        <sharedTo>
            <group>Chandigarh_India</group>
            <roleAndSubordinatesInternal>India_Injection_Domestic_Sales_Eng_Chandigarh</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>India_Injection_Service_Leader_North</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>India_Injection_Service_Technician_North</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FMI_Delhi</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Service_Region__c</columns>
        <columns>GSTIN__c</columns>
        <columns>Total_Aftermarket_AR_India__c</columns>
        <columns>Soldto__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Region__c</field>
            <operation>equals</operation>
            <value>Delhi</value>
        </filters>
        <label>FMI_Delhi</label>
        <language>en_US</language>
        <sharedTo>
            <group>Delhi_India</group>
            <roleAndSubordinatesInternal>India_Injection_Domestic_Sales_Eng_New_Delhi</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>India_Injection_Service_Leader_North_West</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>India_Injection_Service_Technician_North_West</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FMI_East_Kolkata</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Service_Region__c</columns>
        <columns>GSTIN__c</columns>
        <columns>Total_Aftermarket_AR_India__c</columns>
        <columns>Soldto__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Region__c</field>
            <operation>equals</operation>
            <value>Kolkata</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Active_Account</value>
        </filters>
        <label>FMI_Kolkata</label>
        <sharedTo>
            <group>Kolkata_India</group>
            <roleAndSubordinatesInternal>India_Injection_Domestic_Sales_Eng_Gujarat</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>India_Injection_Service_Leader_East_Kolkata</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>India_Injection_Service_Technician_East_Kolkata</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FMI_Haridwar</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Service_Region__c</columns>
        <columns>GSTIN__c</columns>
        <columns>Total_Aftermarket_AR_India__c</columns>
        <columns>Soldto__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Region__c</field>
            <operation>equals</operation>
            <value>Haridwar</value>
        </filters>
        <label>FMI_Haridwar</label>
        <language>en_US</language>
        <sharedTo>
            <role>India_Injection_Domestic_Sales_Eng_Chandigarh</role>
            <role>India_Injection_General_Mgr</role>
            <role>India_Injection_Sales_Eng_Chandigarh</role>
            <role>India_Injection_Service_Leader</role>
            <role>India_Injection_Service_Leader_Haridwar</role>
            <role>India_Injection_Service_Technician_Haridwar</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Active_Account</fullName>
        <active>true</active>
        <description>Created to distinguish Active Accounts from Inactive Accounts</description>
        <label>Active Account</label>
    </recordTypes>
</CustomObject>